--- a/templates/index.html
+++ b/templates/index.html
@@ -1,33 +1,58 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>上传图片</title>
+﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
+<title>Livephotos</title> 
+<meta charset="UTF-8" />
+<meta http-equiv="Content-Type" content="text/html">
+<link rel="stylesheet" type="text/css" href="/static/css/normalize.css" />
+<link rel="stylesheet" type="text/css" href="/static/fonts/font-awesome-4.2.0/css/font-awesome.min.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/demo.css" />
+<link rel="stylesheet" type="text/css" href="/static/css/component.css" />
 </head>
-<body>
-<div >
-
-    <center>
-<form action="/register/" method="get">
-    用户名:<input type="text" name="username">
-    密码:<input type="password" name="password">
-    <input type="submit" value="注册">
-</form>
-
-<form action="/login/" method="get">
-    用户名:<input type="text" name="username">
-    密码:<input type="password" name="password">
-    <input type="submit" value="登录">
-</form>
-
-
-
-
-
-        </center>
-
-<div>
-
-
-</body>
-</html>
+<body background="/static/images/1.jpg">
+<h1>Livephotos</sup></h1>
+<div class="container">
+	<header class="codrops-header">
+		<h1>Livephotos <span>*软件工程项目</span></h1>
+	</header>
+	<section class="content bgcolor-1">
+	<form action="/login/" method="get">
+		<span class="input input--isao">
+			<input class="input__field input__field--isao" type="text" name="username" id="input-31" />
+			<label class="input__label input__label--isao" for="input-31">
+					<span class="input__label-content input__label-content--isao">username</span>
+			</label>
+		</span>
+		<span class="input input--isao">
+			<input class="input__field input__field--isao" type="password" name="password" id="input-32" />
+			<label class="input__label input__label--isao" for="input-32">
+					<span class="input__label-content input__label-content--isao">password</span>
+			</label>
+		</span>
+		<span class="input input--isao">
+			<input type="submit" value="登录">
+		</span>
+	</form>
+	</section>
+	
+	<section class="content bgcolor-8">
+	<form action="/register/" method="get">
+		<span class="input input--isao">
+			<input class="input__field input__field--isao" type="text" name="username" id="input-33" />
+			<label class="input__label input__label--isao" for="input-33">
+					<span class="input__label-content input__label-content--isao">username</span>
+			</label>
+		</span>
+		<span class="input input--isao">
+			<input class="input__field input__field--isao" type="password" name="password" id="input-34" />
+			<label class="input__label input__label--isao" for="input-34">
+					<span class="input__label-content input__label-content--isao">password</span>
+			</label>
+		</span>
+		<span class="input input--isao">
+			<input type="submit" value="注册">
+		</span>
+	</form>
+	</section>
+</div>
+<div class="jianyi">*推荐使用ie8或以上版本ie浏览器或Chrome内核浏览器访问本站</div>
+</body></html>
